feat/ create mono-repo