@@ -1,93 +1,13 @@
 plugins {
-    kotlin("jvm") version "2.2.21"
-    kotlin("plugin.allopen") version "2.2.21"
-    id("io.quarkus")
-
-    id("org.jlleitschuh.gradle.ktlint") version "14.0.1"
-    id("org.owasp.dependencycheck") version "12.2.0"
-}
-
-repositories {
-    mavenCentral()
-    mavenLocal()
-}
-
-val quarkusPlatformGroupId: String by project
-val quarkusPlatformArtifactId: String by project
-val quarkusPlatformVersion: String by project
-
-dependencies {
-    implementation(enforcedPlatform("$quarkusPlatformGroupId:$quarkusPlatformArtifactId:$quarkusPlatformVersion"))
-
-    // Quarkus core
-    implementation("io.quarkus:quarkus-resteasy-jackson")
-    implementation("io.quarkus:quarkus-kotlin")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    implementation("io.quarkus:quarkus-arc")
-    testImplementation("io.quarkus:quarkus-junit5")
-    implementation("io.github.oshai:kotlin-logging-jvm:5.1.0")
-
-    // Data
-    implementation("io.quarkus:quarkus-jdbc-postgresql")
-    implementation("io.quarkus:quarkus-hibernate-orm-panache-kotlin")
-    implementation("io.quarkus:quarkus-hibernate-validator")
-    implementation("io.quarkus:quarkus-flyway")
-    implementation("org.flywaydb:flyway-database-postgresql")
-    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.15.3")
-
-    // Auth
-    implementation("io.quarkus:quarkus-smallrye-jwt")
-    implementation("io.quarkus:quarkus-smallrye-jwt-build")
-    implementation("at.favre.lib:bcrypt:0.10.2")
-
-    // Tools
-    implementation("io.quarkus:quarkus-scheduler")
-    implementation("io.quarkus:quarkus-mailer")
-
-    testImplementation("io.quarkus:quarkus-junit5")
-    testImplementation("io.rest-assured:rest-assured")
-
-    implementation("org.minidns:minidns-hla:1.1.1")
-
-    // monitoring
-    implementation("io.quarkus:quarkus-smallrye-health")
+    id("org.owasp.dependencycheck") version "8.4.0" apply false
 }
 
 group = "tmenier.fr"
 version = "1.0-SNAPSHOT"
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
-}
-
-tasks.withType<Test> {
-    systemProperty("java.util.logging.manager", "org.jboss.logmanager.LogManager")
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-}
-allOpen {
-    annotation("jakarta.ws.rs.Path")
-    annotation("jakarta.enterprise.context.ApplicationScoped")
-    annotation("jakarta.persistence.Entity")
-    annotation("io.quarkus.test.junit.QuarkusTest")
-}
-
-kotlin {
-    compilerOptions {
-        jvmTarget = org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_21
-        javaParameters = true
+allprojects {
+    repositories {
+        mavenCentral()
+        mavenLocal()
     }
-}
-
-ktlint {
-    version.set("1.1.1")
-    android.set(false)
-    outputToConsole.set(true)
-    ignoreFailures.set(false)
-}
-
-dependencyCheck {
-    failBuildOnCVSS = 7.0f
-    suppressionFile = "config/dependency-check/suppressions.xml"
-    formats = listOf("HTML", "JSON")
 }
